# test_task_django_effective_mobile

./: .env  .gitignore  README.md  pyproject.toml
ads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ads/api/: serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/templates/ads/: ad_confirm_delete.html  ad_detail.html  ad_form.html  ad_list.html  base.html  proposal_form.html  proposal_list.html  proposal_status_form.html
config/: settings.py  urls.py
docker/: Dockerfile  docker-compose.yml
docs/: api.md  commands.md  quickstart.md  structure.md  technologies.md
templates/registration/: logged_out.html  login.html  signup.html
